logs/watchdog_20251013_0445.log
[13/10/2025  4:45:01,67] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[13/10/2025  4:45:01,91] END WATCHDOG 
